v4.0.0
- dates variables supported
- compareGroups.default and compareGroups.formula unified in a single compareGroups function.
- new strataTable function: to create stratified tables without having to use cbind.
- package vignette improved.
- new descrTable created. This function builds a descriptive table in one step.
- Imports: kableExtra and chron added,  
- Suggested: car removed
- export2md: new arguments added (format, width, strip, first.strip, background, size and landscape)
- compareGroups: new arguments added (chisq.test.B and chisq.test.seed)
- table.i, createTable: checking OS to print +/- sign removed from table.i and passed to createTable. This speeds up the bivariate construction a lot.
- compareGroups.default: '...' argument removed.
v3.4.0
-. compareGroups now handles tibble objects
v3.3.4
-. bug fixed when checking vignette
v3.3.3
-. bug fixed for Hmisc::label in examples and vignette
v3.3.2
-. createTable: bug fixed related to hide.no
v3.3.1
-. createTable: bug fixed related to extra.labels argument
v3.3
-. createTable: new "extra.labels" argument indicating the key to normal, non-normal or categorical variables.
-. compareGroups: new "byrow" argument to report percentages by rows or by columns.
v3.2.5
-. export2md, export2html: Var removed from descriptive table header.
v3.2.4
-. compareGroups.default: new argument chisq.test.perm to perform simulation chisq test instead of fisher test
v3.2.3
-. export2word: changed working directory
v3.2.2
-. plot do not open new windows when file argument is NULL.
-. new argument "verbose" set to FALSE by default in "compareSNPs"
-. new component in header.labels argument to modify OR/HR bivariate table column label.
-. bug fixed in getResults function when exctracting proportions.  
v3.2.1
-. package vignette updated.
-. new argument "oddsratio.method" in "compareGroups.default" function to compute odds ratio under different methods.
-. XLConnect and shinythemes removed from suggested packages.
v3.2